@startuml

package dev.orion.bot.model {

    User "1..*" -- "0..*" Group : joins

    Group "1" -- "1..*" Status : belongs 
    User "1" -- "0..*" Status: has

    User "1*" -- "0..*" Group : establishs
    Group "1" -- "0..*" Activity : perform
    Activity "0..*" -- "1" User : creates

    Activity "1" -- "0..*" Content : history
    Activity "0..*" -- "1" Editor : uses

    Content "0..*" -- "1" Editor : created by
    User "1" -- "0..*" Content : writes

    class Group{
        - String alias
    }

    class User{
        - String hashUser
        - String name
        - String e-mail
    }

    class Activity{
        - Date date;
        - enum type;
    }

    class Content {
        - String contet
        - Date date
    }

    class Editor{
        - enun type
    }

    class Status{
        - enun status
        - Date date
    }

}

package dev.orion.bot.commands {

    Command <|-- CreateActivity
    Command <|-- CreateGroup
    Command <|-- Participace
    Command <|-- JoinActivity
    Command <|-- CheckStatus
    Command <|-- ListActivities

    abstract Command {
        + {abstract} void executeCommand(MessageCreateEvent event);
        + {abstract} String getHelp()
    }

    Class CreateActivity {}

    Class CreateGroup {}

    Class Participace {}

    Class JoinActivity {}

    Class CheckStatus {}

    Class ListActivities {}

}

package dev.orion.bot {

    App *-- OrionBot
    OrionBot o--> Command

    class App{
    --
    + void main(String[] args)
    }

    class OrionBot {
        - Map<String, Command> commands
        - String discordToken
    --
        + void listen()
        + String getCommand(MessageCreateEvent event)
        + Command selectCommand(String name)
        - void loadCommands()
    }

}

package dev.orion.bot.rest {

    CreateActivity *--> BlocksClient
    CreateGroup *--> BlocksClient
    Participace *--> BlocksClient
    JoinActivity *--> BlocksClient
    CheckStatus *--> BlocksClient
    ListActivities *--> BlocksClient

    class BlocksClient {
    --
        + User createUser(String name);
        + Activity createActivity();
    }

}
@enduml